# rust_sprite_canvas

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
assets/text_data/: input_config.json
public/config/: SampleScene.bson  SampleScene.json  pinball_sprite.bson  pinball_sprite.json
src/: main.rs  main.ts  worker.ts
src/game/: game_setup.rs  game_system.rs  mod.rs  scene_setup.rs
src/game/ui/: game_view.rs
src/pinball/: DynamicRenderer.ts  MapLayoutManager.ts  PinballManager.ts  SpriteAssetManager.ts
src/pinball/collider_component/: LineComponent.ts  OvalComponent.ts  PhysicsHelper.ts  PhysicsInterface.ts  PhysicsVisualizeTool.ts  RectComponent.ts  SphereComponent.ts
src/pinball/object_component/: Flipper.ts  FlipperComponent.ts  ObjectInterface.ts  PinBallElementInterface.ts  Shooter.ts  SideBumper.ts  SphereBumper.ts  UniversalElement.ts
src/pinball/physics_component/: LineComponent.ts  OvalComponent.ts  PhysicsHelper.ts  PhysicsInterface.ts  PhysicsVIsualizeTool.ts  RectComponent.ts  SphereComponent.ts
src/pinball/thread/: pinball_physics.ts  pinball_physics_asset.ts  pinball_thread.ts  pinball_thread_event.ts  simulation_state.ts
src/pinball/utility/: map_loader.ts  pinball_layout.ts  pinball_static.ts  pinball_types.ts  (+1 more)
src/stylesheet/: style.scss
src/utility/: LineMath.ts  UIUtility.rs  UniversalType.ts  UtilityMethod.ts  VectorMath.ts  WebglResource.ts  external_types.rs  mod.rs  static_string.rs  types.rs  utility_func.rs
src/worker_demo/: subworker.ts  worker.ts  worker_buffer.ts  worker_parent_classic.ts
(+3 files in other folders)
