[package]
name = "race_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1" # make sure this is the latest version
serde = {version="1.0.160", features = ["derive"] }
serde_json = "1.0.96"
num-traits = "0.2.14"
